# pcloud-to-proton-drive-migrator

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: offline-contracts.yml
config/: migration.env.example  migration.env.schema
deploy/systemd/: pcloud-migration-supervisor.service  pcloud-migration-supervisor.timer  proton-progress-monitor.service  proton-progress-monitor.timer
docs/: README.md  architecture.md  configuration.md  installation.md  limitations.md  migration-runbook.md  monitoring.md  operations.md  recovery.md  release-readiness.md  security-model.md  troubleshooting.md  verification.md
scripts/: CLAUDE.md
scripts/bootstrap/: debian-ubuntu.sh
scripts/lib/: checks.sh  config.sh  runtime.sh  safety.sh
scripts/migration/: autonomous-source-pipeline.sh  full-pcloud-download.sh  full-sync-inventory-progress.sh  full-sync-status.sh  full-sync.sh  generate-pcloud-top-level-list.sh  install-autonomous-runner.sh  migration_common.py  pcloud-manifest.py  proton-account.py  proton-progress-snapshot.sh  proton-remediate.py  proton-upload.py  proton-verify.py  run-pcloud-manifest-account-bound.sh  run-proton-account-bound.sh  vps-preflight.sh
scripts/proton-drive/: run.sh
tests/contract/: test_install_bundle.py  test_repository_safety.py
tests/fakes/: proton-drive
tests/unit/: test_manifest.py  test_proton_account.py  test_proton_upload.py  (+1 more)
(+4 files in other folders)
